--- a/wavecheck.htm
+++ b/wavecheck.htm
@@ -16,13 +16,17 @@
         var run;
 
         function chgImg(direction) {
-            if (document.images) {
+            // if (document.images) {
                 ImgNum = ImgNum + direction;
-                if (ImgNum > ImgLength) {  ImgNum = 0; }
-                if (ImgNum < 0) { ImgNum = ImgLength; }
-                document.slideshow.src = bg[ImgNum].swellImage; 
+                if (ImgNum > ImgLength) {
+                    ImgNum = 0; 
+                }
+                if (ImgNum < 0) { 
+                    ImgNum = ImgLength; 
+                }
+                $("#slideshow").attr("src", bg[ImgNum].swellImage); 
                 $("div#waveDate").text(bg[ImgNum].date);
-            }
+            // }
         }
 
         function auto() {
@@ -54,8 +58,8 @@
     </div>
 
     <div id = "anim">
-        <img src = "images/loading.png" name="slideshow">
-        <div id = "waveDate"></div>
+        <img id="slideshow" src="images/loading.png">
+        <div id="waveDate"></div>
         <br>
         <div class = "chart-key"></div>
         <!--
