fixed chart key

--- a/wavecheck.htm
+++ b/wavecheck.htm
@@ -61,7 +61,7 @@
         <img id="slideshow" src="images/loading.png">
         <div id="waveDate"></div>
         <br>
-        <div class = "chart-key"></div>
+        <div class = "chart-key c-scale-HTSGW"></div>
         <!--
         <a href = "javascript:chgImg(-1)">Previous</a> &nbsp;|&nbsp;
         <a href = "javascript:auto()">Auto/Stop</a> &nbsp;|&nbsp; 
