--- a/index.htm
+++ b/index.htm
@@ -32,10 +32,10 @@
     <div id="container">
             <img id="logo" src="images/logo.png">
             <div id="search"></div>
-            <ul id="nav">
+            <ul class="nav">
                 <li id="home"><a href="#"></a></li>
                 <li id="about"><a href="#"></a></li>
-                <li id="wavecheck"><a id="nav-wavecheck" href="wavecheck.htm"></a></li>
+                <li class="nav wavecheck"><a href="wavecheck.htm"><span>Wave Check</span></a></li>
             </ul>
             <img id="fb" src="images/fb.png">
 
