--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
     		$('#featured').orbit({
                 animation: 'fade',                  // fade, horizontal-slide, vertical-slide, horizontal-push
                 animationSpeed: 800,                // how fast animtions are
-                timer: false,                        // true or false to have the timer
+                timer: true,                        // true or false to have the timer
                 advanceSpeed: 3000, 		        // if timer is enabled, time between transitions 
                 pauseOnHover: false, 		        // if you hover pauses the slider
                 startClockOnMouseOut: false, 	    // if clock should start on MouseOut
