--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Tao Tao 滔滔</title>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="js/orbit-1.2.3.css">
