--- a/wavecheck.htm
+++ b/wavecheck.htm
@@ -59,7 +59,7 @@
                 <img id="logo" src="images/logo.png">
                 <div id="search"></div>
                 <ul class="nav">
-                    <li class="nav_home"><a href="index.htm"></a></li>
+                    <li class="nav_home"><a href="/"></a></li>
                     <li class="nav_about"><a href="#about"></a></li>
                     <li class="nav_news"><a href="#news"></a></li>
                     <li class="nav_media"><a href="#media"></a></li>                
