--- a/wavecheck.htm
+++ b/wavecheck.htm
@@ -6,8 +6,16 @@
     <title>Tao Tao 滔滔</title>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="js/jqplot/jquery.jqplot.css" />
     <script type="text/javascript" src="js/magicseaweed.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jqplot/jquery.jqplot.min.js"></script>
+    <script type="text/javascript" src="js/jqplot/plugins/jqplot.canvasTextRenderer.min.js"></script>
+    <script type="text/javascript" src="js/jqplot/plugins/jqplot.canvasAxisLabelRenderer.min.js"></script>
+    <script type="text/javascript" src="js/jqplot/plugins/jqplot.highlighter.min.js"></script>
+    <script type="text/javascript" src="js/jqplot/plugins/jqplot.cursor.min.js"></script>
+    <script type="text/javascript" src="js/jqplot/plugins/jqplot.dateAxisRenderer.min.js"></script>
+    <script type="text/javascript" src="js/jqplot/plugins/jqplot.trendline.min.js"></script>
     <script type="text/javascript">
         var bg = getTT();
         var imgNum = 0;
@@ -64,12 +72,13 @@
                 window.clearInterval(run);
                 type = type_user;
                 if (type_user == 1) {
-                    $("#chartkey").attr("class", "chart-key c-scale-PERPW") 
+                    $("#chartkey").attr("class", "chart-key c-scale-PERPW"); 
+                    run = setInterval("chgImg(1, " + type_user + ")", delay);
                 }
                 if (type_user == 2) {
-                    $("#chartkey").attr("class", "chart-key c-scale-WMAG") 
+                    $("#chartkey").attr("class", "chart-key c-scale-WMAG"); 
+                    run = setInterval("chgImg(1, " + type_user + ")", delay);
                 }
-                run = setInterval("chgImg(1, " + type_user + ")", delay);
                 // lock = false;
             } else {
                 window.clearInterval(run);
@@ -86,6 +95,57 @@
                 var myHref = $(this).attr('href');
                 if( url.match( myHref )){
                     $(this).addClass("selected");
+                }
+            });
+
+            var data1 = [
+                          ["08/01/2012 2:29 AM", 0.79],
+                          ["08/01/2012 7:35 AM", 0.95],
+                          ["08/01/2012 2:31 PM", 0.08],
+                          ["08/01/2012 10:18 PM", 1.12],
+                          ["08/02/2012 3:16 AM", 0.76],
+                          ["08/02/2012 8:41 AM", 0.96],
+                          ["08/02/2012 3:17 PM", 0.12],
+                          ["08/02/2012 10:55 PM", 1.10],
+                          ["08/03/2012 4:02 AM", 0.72],
+                          ["08/03/2012 9:39 AM", 0.95],
+                          ["08/03/2012 4:02 PM", 0.20],
+                          ["08/03/2012 11:30 PM", 1.07]
+                        ]
+            // var data1 = [['2012-10-26 12:14AM', 0.78], ['2012-10-27 3:14AM', 1]]
+            var plot = $.jqplot('tide_chart', [data1], {
+                seriesColors: ["#324890"],
+                axes: {
+                    xaxis: {
+                        renderer: $.jqplot.DateAxisRenderer,
+                        pad: 0,
+                        min: "08/01/2012 2:29 AM",
+                        tickOptions: {
+                            formatString: "%m-%d&nbsp%H:%M"
+                        },
+                        showTicks: true
+                    },
+                    yaxis: {
+                        tickOptions: { 
+                            formatString:'%.2fm'
+                        }
+                    }
+                },
+                series: [{renderer:$.jqplot.TrendLine}],
+                grid: {
+                    drawGridLines: false
+                },
+                highlighter: {
+                    show: true,
+                    sizeAdjust: 7.5
+                    // useAxesFormatters: false, 
+                    //tooltipFormatString: m'
+                },
+                cursor: {
+                    show: false
+                },
+                seriesDefaults: {
+                    fill: true
                 }
             });
         });
@@ -121,9 +181,6 @@
                         <li>
                             <a href="#wind" onclick="auto(2); return false;">WIND</a>
                         </li>
-                        <li>
-                            <a>TIDE</a>
-                        </li> 
                     </ul>
                 </div>
                 <div id="anim">
@@ -137,6 +194,14 @@
                     -->
                 </div>
                 <div id = "chartkey" class = "chart-key c-scale-HTSGW"></div>
+                </div>  
+                <div id="tide"> 
+                    <div id="tide_title">
+                        TIDE
+                    </div>
+                    <div id="tide_chart">
+                    </div>
+                </div>
             </div>
         </div>
         <img id="bottom_bar" src="images/bottombar.png">
