fixed width for wavecheck

--- a/wavecheck.htm
+++ b/wavecheck.htm
@@ -170,7 +170,7 @@
                 <img id="fb" src="images/fb.png">
         </div>
         <img id="top_bar" src="images/topbar.png">
-        <div id="center">
+        <div id="wavecenter">
             <div id="chart">
                 <div class = "chart-type">
                     <ul>  
